fixing structure spacing on component tech

--- a/src/components/Technologies/technologies.scss
+++ b/src/components/Technologies/technologies.scss
@@ -13,7 +13,7 @@
   justify-content: space-between;
   width: 100%;
   align-items: center;
-
+  margin:40px 0;
   height: 100%;
   position: relative;
   .circle-border{
